err/django-development-utils.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/development_utils'...
Listing './lib/python3.5/site-packages/development_utils/management'...
Listing './lib/python3.5/site-packages/development_utils/management/commands'...
Compiling './lib/python3.5/site-packages/development_utils/management/commands/createadmin.py'...
***   File "./lib/python3.5/site-packages/development_utils/management/commands/createadmin.py", line 36
    print 'Skipping %s, could not find any models' % app.__name__
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/development_utils/management/commands/createapp.py'...
***   File "./lib/python3.5/site-packages/development_utils/management/commands/createapp.py", line 32
    print 'Application %s created, remember to install it in INSTALLED_APPS' % appname
                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/development_utils/management/commands/createcommand.py'...
***   File "./lib/python3.5/site-packages/development_utils/management/commands/createcommand.py", line 29
    print 'Arguments missing, specify app and command name(s)'
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/development_utils/management/commands/createtaglibrary.py'...
***   File "./lib/python3.5/site-packages/development_utils/management/commands/createtaglibrary.py", line 29
    print 'Arguments missing, specify app and command name(s)'
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/development_utils/shared.py'...
***   File "./lib/python3.5/site-packages/development_utils/shared.py", line 12
    print "Skipping package %s, already exists" % package_directory
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_development_utils-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
